tests/suite/snapshots/suite__check__tests__check__bad_array_2.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_array_2.xi:2:5]
   │
 2 │     x:bool[] = false
   ·     ────┬───  
   ·         ╰───── Expected bool[] but found bool
───╯

